samples/_failures_safe/1761515532_692e1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcec8105.c: In function ‘main’:
./samples/SAFE/__tmp_bcec8105.c:161:46: error: expected ‘)’ at end of input
  161 |     if (scanf("%d", &edges) != 1 || edges < 0
      |        ~                                     ^
      |                                              )
./samples/SAFE/__tmp_bcec8105.c:161:5: error: expected declaration or statement at end of input
  161 |     if (scanf("%d", &edges) != 1 || edges < 0
      |     ^~
